chore(style): update code style